<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeExam</string>
    <string name="image_translucent_bar">image_translucent_bar</string>
    <string name="instridution">说明</string>
    <string name="person_name">Hippophae</string>
    <string name="fisfh">完成</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_testings">更新题库</string>
    <string name="login_bnt">登录</string>
    <string name="account_no">还没有账号？</string>
    <string name="register_bnt">注册</string>
    <string name="skipqusetion">路过</string>
    <string name="checkqusetion">检查</string>
    <string name="nextqusetion">下题</string>
    <string name="sigerselect">单选项</string>
    <string name="mutiselect">多选项目</string>
    <string name="judgeA">单选项</string>
    <string name="answer">答案</string>
    <string name="note">提示</string>
    <string name="ksxm">SafeExam</string>
    <string name="_15">40分钟</string>
    <string name="t_15">40分钟</string>
    <string name="forgetpass">忘记密码</string>
    <string name="bindphone">绑定手机</string>
    <string name="changepass">修改密码</string>
    <string name="lookgrade">查看成绩</string>
    <string name="set_head">修改头像</string>
    <string name="exit_app">退出登陆</string>
    <string name="exit_sys">结束程序</string>
    <string name="title_activity_settings">设置</string>
    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>
    <!-- Strings related to Settings -->
    <string name="this_is_fragment">One hundred of solitude</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="jdt">jdt</string>
    <string name="ltitle">你好，怎么了</string>
    <string name="remenberme">记住我</string>
    <string name="tv_nick">昵称</string>
    <string name="et_nick">昵称</string>
    <string name="et_nick_n">昵称</string>
    <string name="tv_nick_n">昵称</string>
    <string name="tihao">题目</string>
    <string name="dwonload">下载</string>
    <string name="gallay">相册</string>
    <string name="camery">拍照</string>
    <string name="upload">上传</string>
    <string name="info_name">吴佳宝</string>
    <string name="info_class">tenerify</string>
    <string name="info_number">18335054303</string>
    <string name="info_person">个人信息</string>
    <string name="info_production">产品信息</string>

    <string name="add_paper">添加试卷</string>
    <string name="update_paper">更新试卷</string>
    <string name="select_paper">选择试卷</string>
    <string name="title_activity_eaxm">EaxmActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="auther">牧之河</string>
    <string name="contact">294967877@qq.com</string>
    <string name="face">face</string>
    <string name="tv_head">head</string>
    <string name="error_research">搜索</string>
    <string name="error_share">分享</string>
    <string name="submit">提交</string>
    <string name="add">添加</string>
    <string name="add_papers">添加试卷</string>
    <string name="ask">问一个问题</string>
    <string name="id_10">10、</string>
    <string name="xxx">人不会死在绝境，却往往栽在十字路口</string>

    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很报歉，程序栽在十字路口。</string>
    <string name="submit_report">请给我发邮件报告错误，以便尽快修复，谢谢！</string>

</resources>
