<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/air_speed_label">
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_FindFragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/orange"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/light_green"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_FindFragment_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_FindFragment_title" app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_alignParentBottom="false" android:layout_marginTop="168dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:weightSum="2" android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/instridution"
                android:id="@+id/textView7" android:layout_weight="1" android:singleLine="true"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/person_name"
                android:ems="10"
                android:id="@+id/editText" android:layout_weight="1"/>
        </LinearLayout>
        <ImageView
            android:layout_width="283dp"
            android:layout_height="350dp"
            android:id="@+id/imageView7" android:src="@drawable/hippophaes" android:layout_marginBottom="90dp" android:contentDescription="@string/fisfh" android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>
