<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/air_speed_label"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/select_paper"
            android:textColor="@color/base_color_text_white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/add_paper"
            style="@style/common_button_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/add_paper"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large"/>

        <Button
            android:id="@+id/update_paper"
            style="@style/common_button_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/update_paper"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/base_horization_line"/>


    <ListView
        android:id="@+id/lv_paper_teacher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@drawable/base_horizontal_line"
        android:dividerHeight="2dp"
        android:fadingEdgeLength="0dp"
        android:fastScrollEnabled="true"
        android:paddingBottom="10dp"
        android:scrollbars="vertical"/>

</LinearLayout>