<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/theme_bg_color">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="#00000000"
            android:src="@drawable/back_icon_selector"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_papers"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:src="@drawable/base_horization_line"
        android:contentDescription=""
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_question"
            android:layout_width="0dp"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_weight="1"
            android:layout_margin="12dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_weight="1"
            android:layout_margin="12dp"
            android:background="@drawable/input_green_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <include
        layout="@layout/add_question_list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line"
        android:layout_above="@id/bottom"/>


    <include
        android:id="@+id/add_paper_dialog"
        layout="@layout/dialog_add_paper"
        android:layout_height="210dp"
        android:layout_width="300dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>